2008-03-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el: Use inhibit-read-only and with-current-buffer.
	(gnus-summary-jump-to-group): Consider windows on other displayed frames as
	well.  Similar changes might be needed elsewhere, but that's the one I've
	bumped into during my use.

	* gnus-msg.el (gnus-debug):
	* gnus-group.el (gnus-update-group-mark-positions):
	Use mm-string-to-multibyte.

2008-02-29  Andreas Seltenreich  <andreas@gate450.dyndns.org>

	* nnweb.el (nnweb-google-parse-1): Fix date parsing on articles with
	empty author.

2008-02-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-marks): Add variable for
	customization of marks and their appearance.
	(gnus-registry-read-mark): Use it.
	(gnus-registry-do-marks): Add utility function to loop through
	`gnus-registry-marks'.
	(gnus-registry-install-shortcuts-and-menus): Add function to install
	shortcuts and menus.
	(gnus-registry-initialize): Use it.
	(gnus-registry-default-mark): Clarify documentation.

2008-02-29  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el, gnus-bookmark.el, gnus-dired.el, gnus-draft.el:
	* gnus-group.el, gnus-msg.el, gnus-score.el, gnus-sum.el, gnus-util.el:
	* gnus.el, mail-source.el, message.el, mm-decode.el, mm-uu.el, mml.el:
	* nnmail.el, pop3.el, smiley.el, smime.el, spam-report.el:
	Change defcustom :version from 23.0 to 23.1.

2008-02-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-follow-group-p)
	(gnus-registry-post-process-groups): Add functions to aid registry
	splitting and improve logging.  Clarify behavior in function
	documentation.
	(gnus-registry-split-fancy-with-parent): Use them.

2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el: Use with-current-buffer.

2008-02-27  David Engster  <dengste@eml.cc>

	* nnmairix.el (nnmairix-request-group-with-article-number-correction):
	Express real group name in the response.

2008-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>
