@@ -1,5 +1,7 @@
 2008-03-03  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* mm-bodies.el (mm-decode-content-transfer-encoding): Simplify.
+
 	* gnus-sum.el: Use inhibit-read-only and with-current-buffer.
 	(gnus-summary-jump-to-group): Consider windows on other displayed frames as
 	well.  Similar changes might be needed elsewhere, but that's the one I've
